# asset_refiner

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
include/: AssetImporter.h  Material.h  Model.h  Texture.h
include/renderer/: GLMesh.h  GLModel.h  GLRenderer.h  GLShader.h  GLTexture.h
src/: AssetImporter.cpp  Model.cpp  main.cpp
src/renderer/: GLMesh.cpp  GLModel.cpp  GLRenderer.cpp  GLTexture.cpp
src/shaders/: shader.frag  shader.vert
